--- a/src/partials/landing.html
+++ b/src/partials/landing.html
@@ -1,16 +1,17 @@
 <section class="sectionLanding">
     <h1 class="h1">Buscador de Series Anime</h1>
     <form action="">
-        <input  class="input" type="text" placeholder="Escribe la serie">
-        <button class="btn">BUSCAR</button>
-        <button class="btn">RESET</button>
+        <input  class="input js-input" type="text" placeholder="Escribe la serie">
+        <button class="btn js-btnSearch">BUSCAR</button>
+        <button class="btn js-btnReset">RESET</button>
     </form>
     <section class="sectionSeries">
-        <div class="sectionSeries-fav">
+        <div class="sectionSeries-fav js-sectionFav">
             <h3 class="sectionSeries-h3">Series Favoritas</h3>
         </div>
-        <div class="sectionSeries-Result">
+        <div class="sectionSeries-Result ">
             <h3 class="sectionSeries-h3">Resultados</h3>
+            <div class="sectionSeries-Result-Img js-sectionResult"></div>
         </div>
     </section>
 </section>
