--- a/src/scss/core/_landing.scss
+++ b/src/scss/core/_landing.scss
@@ -7,8 +7,6 @@
   padding: 14px;
   gap: 100px;
   padding: 100px 40px 100px 40px;
-  height: 100vh;
-  background-color: black;
 }
 .sectionSeries {
   display: flex;
@@ -22,23 +20,30 @@
     gap: 20px;
     border: 2px;
     border-radius: 2px;
-    width: 50%;
+    flex-direction:column ;
     border: 5px solid white;
     border-radius: 10px;
-    padding: 20px 10px 400px 10px;
+    padding: 20px 20px 250px 20px;
     background:url('../images/imganime.jpg');
   }
   &-Result {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     gap: 20px;
     border: 2px;
     border-radius: 2px;
-    width: 50%;
     border: 5px solid white;
     border-radius: 10px;
-    padding: 20px 10px 400px 10px;
+    padding: 20px 20px 250px 20px;
     background:url('../images/imganime.jpg');
+    &-Img{
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      gap: 20px;
+      align-items: flex-start;
+    }
   }
   &-h3 {
     font-family: "Montserrat", sans-serif;
@@ -46,7 +51,6 @@
     font-weight: weight;
     font-style: normal;
     color: pink;
-    //background-color: rgba(167, 196, 243, 0.8);
     background-color: white;
     padding: 10px;
     border-radius: 5px;
@@ -82,5 +86,31 @@
 }
 .btn:hover{
     background-color: rgb(234, 160, 172);
-    padding: 11px;
+    transform: scale(1.02);
+}
+
+
+.container-info{
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 10px;
+  border-radius: 5px;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  display: flex
+;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  gap: 20px;
+  color: white;
+}
+.container-info:hover{
+  background-color: rgba(0, 0, 0, 0.6);
+  transform: scale(1.01);
+}
+
+.imgResult{
+  width: 100px;
 }
