resolving problems from seeker

--- a/src/partials/landing.html
+++ b/src/partials/landing.html
@@ -3,7 +3,7 @@
     <form action="">
         <input  class="input js-input" type="text" placeholder="Escribe la serie">
         <button class="btn js-btnSearch">BUSCAR</button>
-        <button class="btn js-btnReset">RESET</button>
+        <button class="btn js-btnReset"  onclick="location.reload()" >RESET</button>
     </form>
     <section class="sectionSeries">
         <div class="sectionSeries-fav js-sectionFav">
