--- a/src/scss/core/_landing.scss
+++ b/src/scss/core/_landing.scss
@@ -108,9 +108,23 @@
 }
 .container-info:hover{
   background-color: rgba(0, 0, 0, 0.6);
-  transform: scale(1.01);
 }
 
 .imgResult{
   width: 100px;
+}
+.btnFavorite{
+  padding: 10px;
+  border-radius: 5px;
+  background-color: pink;
+  color: white;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  text-align: center;
+  border:none;
+}
+.btnFavorite:hover{
+  background-color: rgb(234, 160, 172);
+  transform: scale(1.02);
 }
