--- a/src/partials/landing.html
+++ b/src/partials/landing.html
@@ -6,8 +6,9 @@
         <button class="btn js-btnReset"  onclick="location.reload()" >RESET</button>
     </form>
     <section class="sectionSeries">
-        <div class="sectionSeries-fav js-sectionFav">
+        <div class="sectionSeries-fav ">
             <h3 class="sectionSeries-h3">Series Favoritas</h3>
+            <div class="sectionSeries-fav-Img js-sectionFav"></div>
         </div>
         <div class="sectionSeries-Result ">
             <h3 class="sectionSeries-h3">Resultados</h3>
