--- a/src/scss/core/_landing.scss
+++ b/src/scss/core/_landing.scss
@@ -16,7 +16,7 @@
 
   &-fav {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 20px;
     border: 2px;
     border-radius: 2px;
@@ -25,6 +25,13 @@
     border-radius: 10px;
     padding: 20px 20px 250px 20px;
     background:url('../images/imganime.jpg');
+    &-Img{
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+      gap: 20px;
+      align-items: flex-start;
+    } 
   }
   &-Result {
     display: flex;
