--- a/src/partials/landing.html
+++ b/src/partials/landing.html
@@ -1,9 +1,9 @@
 <section class="sectionLanding">
     <h1 class="h1">Buscador de Series Anime</h1>
-    <form action="">
-        <input  class="input js-input" type="text" placeholder="Escribe la serie">
+    <form class="form" action="">
+         <input  class="input js-input" type="text" placeholder="Escribe la serie">
         <button class="btn js-btnSearch">BUSCAR</button>
-        <button class="btn js-btnReset"  onclick="location.reload()" >RESET</button>
+        <button class="btn-reset js-btnReset"  onclick="location.reload()" >RESET</button>
     </form>
     <section class="sectionSeries">
         <div class="sectionSeries-fav ">
