--- a/src/scss/core/_landing.scss
+++ b/src/scss/core/_landing.scss
@@ -104,10 +104,11 @@
     font-optical-sizing: auto;
     font-weight: 600;
     border: none;
+    cursor: pointer;
 }
 .btn:hover{
     background-color: rgb(234, 160, 172);
-    transform: scale(1.02);
+    transform: scale(1.02);  
 }
 .btn-reset{
   padding: 10px;
@@ -118,13 +119,34 @@
   font-optical-sizing: auto;
   font-weight: 600;
   border: none;
+  cursor: pointer;
 }
 .btn-reset:hover{
   background-color:#935c8c;
   transform: scale(1.02);
 }
 
-
+.container-infoF{
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 10px;
+  margin: 20px;
+  border-radius: 5px;
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  display: flex
+;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  gap: 20px;
+  color: white;
+}
+.container-infoF:hover{
+  background-color: rgba(0, 0, 0, 0.6);
+  transform: scale(1.02);
+}
 .container-info{
   background-color: rgba(0, 0, 0, 0.4);
   padding: 10px;
@@ -163,6 +185,26 @@
 }
 .btnFavorite:hover{
   background-color: rgb(234, 160, 172);
+  transform: scale(1.02);
+}
+.delete i{
+  color: white;
+  border-radius: 100px;
+  font-size: 16px;
+  cursor: pointer;
+}
+.delete i:hover{
+  color:pink;
+  transform: scale(1.02);
+}
+.plus{
+  color: white;
+  border-radius: 100px;
+  font-size: 20px;
+  cursor: pointer;
+}
+.plus:hover{
+  color:pink;
   transform: scale(1.02);
 }
 
